--- a/synchronoss-challenge/Cells/Stations Cell/stationsTVCell.xib
+++ b/synchronoss-challenge/Cells/Stations Cell/stationsTVCell.xib
@@ -11,41 +11,60 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="stationCell" rowHeight="111" id="TQu-ju-sRw" customClass="stationsTVCell" customModule="synchronoss_challenge" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="111"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="stationCell" rowHeight="292" id="TQu-ju-sRw" customClass="stationsTVCell" customModule="synchronoss_challenge" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="292"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TQu-ju-sRw" id="HnX-pt-Qfy">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="110.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="291.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h1j-rR-QBa">
-                        <rect key="frame" x="20" y="20" width="374" height="70.5"/>
+                        <rect key="frame" x="20" y="20" width="374" height="251.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ule-o1-ZQ9">
-                                <rect key="frame" x="10" y="0.0" width="323" height="70.5"/>
+                                <rect key="frame" x="10" y="10" width="323" height="46.5"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="70.5" id="IBb-qF-9Tr"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="46.5" id="cmm-UZ-7Eh"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="20"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-next" translatesAutoresizingMaskIntoConstraints="NO" id="vId-SH-zbD">
-                                <rect key="frame" x="343" y="20.5" width="15" height="30"/>
+                                <rect key="frame" x="343" y="18.5" width="15" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="15" id="Yeh-cn-hUL"/>
                                     <constraint firstAttribute="height" constant="30" id="wu5-Sl-ib8"/>
                                 </constraints>
                             </imageView>
+                            <view alpha="0.20000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Zr-Zn-v2E" userLabel="Separator View">
+                                <rect key="frame" x="20" y="66.5" width="334" height="2"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="gVQ-bv-sMG"/>
+                                </constraints>
+                            </view>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Poe-hG-fds">
+                                <rect key="frame" x="20" y="78.5" width="334" height="163"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="163" id="mhf-eP-dbU"/>
+                                </constraints>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" red="0.34509803919999998" green="0.3921568627" blue="0.62352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="ule-o1-ZQ9" firstAttribute="top" secondItem="h1j-rR-QBa" secondAttribute="top" id="LqX-OI-dJu"/>
-                            <constraint firstItem="vId-SH-zbD" firstAttribute="centerY" secondItem="h1j-rR-QBa" secondAttribute="centerY" id="gyR-WJ-HTb"/>
+                            <constraint firstItem="7Zr-Zn-v2E" firstAttribute="leading" secondItem="h1j-rR-QBa" secondAttribute="leading" constant="20" id="Ay4-Ii-X53"/>
+                            <constraint firstItem="vId-SH-zbD" firstAttribute="centerY" secondItem="ule-o1-ZQ9" secondAttribute="centerY" id="CJe-El-fwk"/>
+                            <constraint firstAttribute="bottom" secondItem="Poe-hG-fds" secondAttribute="bottom" constant="10" id="Djl-I6-TbT"/>
+                            <constraint firstAttribute="trailing" secondItem="7Zr-Zn-v2E" secondAttribute="trailing" constant="20" id="L8j-S1-fTQ"/>
+                            <constraint firstItem="ule-o1-ZQ9" firstAttribute="top" secondItem="h1j-rR-QBa" secondAttribute="top" constant="10" id="LqX-OI-dJu"/>
+                            <constraint firstItem="Poe-hG-fds" firstAttribute="leading" secondItem="h1j-rR-QBa" secondAttribute="leading" constant="20" id="N60-6T-vng"/>
+                            <constraint firstItem="7Zr-Zn-v2E" firstAttribute="top" secondItem="ule-o1-ZQ9" secondAttribute="bottom" constant="10" id="bBW-H9-WzA"/>
+                            <constraint firstAttribute="trailing" secondItem="Poe-hG-fds" secondAttribute="trailing" constant="20" id="itE-cZ-gUa"/>
                             <constraint firstAttribute="trailing" secondItem="vId-SH-zbD" secondAttribute="trailing" constant="16" id="mdb-hI-YWH"/>
+                            <constraint firstItem="Poe-hG-fds" firstAttribute="top" secondItem="7Zr-Zn-v2E" secondAttribute="bottom" constant="10" id="oDb-Ze-8nI"/>
                             <constraint firstItem="vId-SH-zbD" firstAttribute="leading" secondItem="ule-o1-ZQ9" secondAttribute="trailing" constant="10" id="vwJ-cL-7fu"/>
                             <constraint firstItem="ule-o1-ZQ9" firstAttribute="leading" secondItem="h1j-rR-QBa" secondAttribute="leading" constant="10" id="wC8-5C-cUc"/>
-                            <constraint firstAttribute="bottom" secondItem="ule-o1-ZQ9" secondAttribute="bottom" id="yk4-cZ-zmV"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -59,9 +78,10 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="cardView" destination="h1j-rR-QBa" id="eGe-86-YXz"/>
+                <outlet property="mapView" destination="Poe-hG-fds" id="ban-Zq-Hwq"/>
                 <outlet property="stationNameLbl" destination="ule-o1-ZQ9" id="LLb-rg-u7q"/>
             </connections>
-            <point key="canvasLocation" x="21.739130434782609" y="33.816964285714285"/>
+            <point key="canvasLocation" x="21.739130434782609" y="94.419642857142847"/>
         </tableViewCell>
     </objects>
     <resources>
